Aggiunti pacchetti a configurazione di Arch
easyeffects, reflector

--- a/user_configuration.json
+++ b/user_configuration.json
@@ -47,6 +47,8 @@
     "plasma-meta",
     "egl-wayland",
     "plasma-workspace",
+    "easyeffects",
+    "reflector",
     "kate",
     "ark",
     "dolphin",
