Spostati pacchetti core di KDE per Arch Linux nelle fonti

--- a/user_configuration.json
+++ b/user_configuration.json
@@ -43,19 +43,10 @@
     "git",
     "neovim",
     "lsd",
-    "fastfetch",
-    "plasma-meta",
-    "egl-wayland",
-    "plasma-workspace",
-    "easyeffects",
+    "pacman-contrib",
     "reflector",
-    "kate",
-    "ark",
-    "dolphin",
-    "kolourpaint",
-    "filelight",
-    "gwenview",
-    "kcalc",
+    "fastfetch",
+    "easyeffects",
     "kitty",
     "flatpak",
     "zsh",
@@ -73,7 +64,6 @@
     "zip",
     "unzip",
     "python",
-    "python-pip",
     "jdk21-openjdk",
     "ttf-jetbrains-mono-nerd"
   ],
