Divise le impostazioni in due file e spostata config shell nelle app

--- a/conf/script.cfg
+++ b/conf/script.cfg
@@ -1,4 +1,6 @@
 DOTS_DIR="$HOME/.dotfiles"
 DOTS_REPO="https://github.com/lu-papagni/dots.git" 
 SOURCES_SRC_DIR="packagelist"
+SETUP_CONF_DIR="conf"
 FAV_SHELL="zsh"
+SETUP_SYSTEMD_UNITS=false
