fix(config): resa la directory dotfiles relativa alla home
Questo risolve un problema con l'escaping di alcuni caratteri, specialmente mentre si usa il comando find.

--- a/default.cfg
+++ b/default.cfg
@@ -15,8 +15,8 @@ INSTALL_PACKAGES=(
 # Repository git da cui scaricare la configurazione
 DOTFILES_REPO='lu-papagni/dots'
 
-# Directory dove salvare la configurazione
-DOTFILES_DIR='~/.dotfiles'
+# Directory relativa alla $HOME dove salvare la configurazione
+DOTFILES_DIR='.dotfiles'
 
 # File da cui leggere la blacklist per i collegamenti simbolici
 SYMLINK_BLACKLIST=./symlink_ignore
