chore(default settings): aggiunti pacchetti mancanti

--- a/default.cfg
+++ b/default.cfg
@@ -3,13 +3,15 @@ ENABLE_UNSTABLE_MIRRORS=true
 
 # Pacchetti da installare
 INSTALL_PACKAGES=(
-  'git'
   'bat'
-  'lsd'
-  'zsh'
-  'fzf'
-  'ripgrep'
+  'btop'
   'fastfetch'
+  'fzf'
+  'git'
+  'lsd'
+  'npm'
+  'ripgrep'
+  'zsh'
 )
 
 # Repository git da cui scaricare la configurazione
